@@ -7,6 +7,9 @@ Unreleased
 - Updated edit_acl view to allow workflow transitions, including re-inserting
   an object with a previously customized acl back into a proper workflow state.
 
+- LP #426385 Added a few extra parameters to template call for
+  admin_edit_profile view.  Extra paramaters used by OSI custom template.
+
 3.14 (2009-09-08)
 -----------------
 
